--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,41 @@
-.App {
-  text-align: center;
+html,
+body,
+#ro {
+    height: 100%;
+    width: 100%;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.Prof {
+    position: relative;
+    display: flex;
+    flex-flow: column;
 }
-
-.App-title {
-  font-size: 1.5em;
+.TopBar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    width: 100%;
+    height: 62px;
+    padding: 0 24px;
 }
-
-.App-intro {
-  font-size: large;
+.TopBar a {
+    margin-right: 18px;
+    text-decoration: none;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.animated-page-wrapper {
+    position: absolute;
+    top: 62px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.page {
+    padding: 0 24px;
 }
